<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="status"
        android:summaryOff="@string/settings_status_off_summary"
        android:summaryOn="@string/settings_status_on_summary"
        android:title="@string/settings_status_title" />

    <EditTextPreference
        android:defaultValue="10.0.2.2"
        android:key="address"
        android:inputType="textUri"
        android:summary="@string/settings_address_summary"
        android:title="@string/settings_address_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="secure"
        android:summaryOff="@string/settings_secure_off_summary"
        android:summaryOn="@string/settings_secure_on_summary"
        android:title="@string/settings_secure_title" />

    <EditTextPreference
        android:defaultValue="300"
        android:key="interval"
        android:numeric="integer"
        android:summary="@string/settings_interval_summary"
        android:title="@string/settings_interval_title" />

</PreferenceScreen>
